base/demo/podinfo/samples/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "sample-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: sample-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: "sample-service"
          servicePort: 5000
